--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ Flask==2.1.0
 Flask-Cors==3.0.9
 Flask-RESTful==0.3.8
 gunicorn==19.3.0
-requests==2.9.1
-beautifulsoup4==4.9.3
+youtube_dl==2021.12.17
